tests/ui/impl-trait/in-trait/default-body-with-rpit.next.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/default-body-with-rpit.rs:13:9
   |
LL |         ""
   |         ^^ expected `impl Debug`, got `&'static str`
   |
note: previous use here
  --> $DIR/default-body-with-rpit.rs:12:39
   |
LL |       async fn baz(&self) -> impl Debug {
   |  _______________________________________^
LL | |         ""
LL | |     }
   | |_____^

error: aborting due to previous error

